<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TermEdit"
    tools:showIn="@layout/activity_term_edit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/termEditTitleField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/term_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/termEditStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/term_start_date"
            android:textSize="18sp" />

        <DatePicker
            android:id="@+id/termEditStartDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"/>

        <TextView
            android:id="@+id/termEditEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/term_end_date"
            android:textSize="18sp" />

        <DatePicker
            android:id="@+id/termEditEndDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <Button
            android:id="@+id/termEditSaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveTerm"
            android:text="@string/save" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>