<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MentorEdit"
    tools:showIn="@layout/activity_mentor_edit">

    <TextView
        android:id="@+id/editMentorName"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/mentor_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editMentorPhone"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/phone_number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMentorName" />

    <TextView
        android:id="@+id/editMentorEmail"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/email_address"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMentorPhone" />

    <EditText
        android:id="@+id/editMentorNameField"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/editMentorName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editMentorPhoneField"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="none|phone"
        app:layout_constraintStart_toEndOf="@+id/editMentorPhone"
        app:layout_constraintTop_toBottomOf="@+id/editMentorNameField" />

    <EditText
        android:id="@+id/editMentorEmailField"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="none|textEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/editMentorEmail"
        app:layout_constraintTop_toBottomOf="@+id/editMentorPhoneField" />

    <Button
        android:id="@+id/editMentorSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/save"
        android:onClick="saveMentor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMentorEmailField" />
</android.support.constraint.ConstraintLayout>